# baiakboo

./: .gitignore  CMakeLists.txt  README.md  _Query Castle.sql  appveyor.yml  baiak_with_site.sql  config.lua
cmake/: FindLibXML2.cmake  FindOpenSSL.cmake
data/actions/scripts/: castlewar1.lua  removefragstwo.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: fraglook.lua  noobsay.lua  vipeffect.lua
data/globalevents/scripts/: mensagemautoloot.lua  mensagemitems.lua  save.lua  shopmsg.lua  tiles.lua  tiles3.lua
data/lib/: DTT.lua  realTeamBattle.lua
data/monster/: Alpha Tower.xml
data/monster/8.4/: nightstalker.xml
data/monster/baroes/: Exp.xml  Guarda costas do GOD.xml  Trapo Mermo.xml  Verminor.xml
data/monster/hydro-elementals/: Ice Overlord.xml
data/monster/pirates/: pirate corsair.xml
data/monster/skeletons/: pirate skeleton.xml
data/movements/scripts/: vipTile.lua
data/npc/: Event Seller.xml  Florentine.xml  Free Seller.xml  Removedor de frags.xml
data/npc/scripts/: bank.lua
data/raids/: raids.xml
data/spells/scripts/healing/: divine healing.lua  heal friend.lua
data/weapons/scripts/: donatestaff.lua  staff.lua
data/world/: Baiak Barao-house.xml  BaiakBoo.xml
msvc/: TheOTXServer.vcxproj  TheOTXServer.vcxproj.filters  gui_resources.rc
schema/: mariadb.sql
schemas/: mariadb.sql  postgresql.sql
src/: CMakeLists.txt  actions.cpp  baseevents.cpp  baseevents.h  condition.h  databasepgsql.cpp  gameservers.cpp  globalevent.cpp  group.cpp  item.h  items.cpp  items.h  luascript.cpp  luascript.h  monsters.cpp  movement.cpp  npc.cpp  otpch.h  otserv.cpp  outfit.cpp  player.cpp  protocol.cpp  raids.h  scriptmanager.cpp  spawn.cpp  spells.cpp  status.cpp  tools.cpp  tools.h  vocation.cpp  weapons.cpp
src/dev-cpp/: Makefile.win  TheForgottenServer.dev  TheForgottenServer_private.h  TheForgottenServer_private.rc
vc14/: theforgottenserver.vcxproj
